# Trace-Bench

./: .gitignore  README.md  setup.py
KernelBench/: BATCH_EVALUATION_GUIDE.md  CUDA_ERROR_FIXES.md  KERNELBENCH_DETAILED_ANALYSIS.md  MODAL_AND_SRC_EXPLAINED.md  PERSISTENT_MODAL_EVALUATOR_README.md  PIPELINE_INTEGRATION.md  QUICKSTART_PERSISTENT_MODAL.md  README.md  add_labels_to_dataset.py  check_dataset_format.py  cuda_eval_client.py  cuda_eval_server.py  demo_kernel_evaluator.py  eval_single_example.py  evaluate_with_modal.py  extract_labels.py  install.sh  kernel_evaluator.py  level1_prob1_cuda_custom_cuda_gpt5_example.txt  load_dataset.py  modal_kernel_evaluator.py  pipeline_integration_example.py  preprocess.py  pyproject.toml  simple_eval_example.py  simple_test.py  test_asyncio_integration.py  test_eval_single_debug.py  test_guide_simple.py  test_modal_direct.py  test_server_client.py  uninstall.sh
KernelBench/api-server-setup/: test_litellm.py
KernelBench/dataset/: utils.py
KernelBench/guide/: evaluate.py  test_client.py  test_guide.py  test_guide_simple.py
KernelBench/my_plot/: extract_stepwise_data.py  plot_fast_p.py  plot_fast_p_separate.py  plot_kernel_comparison_over_steps.py
KernelBench/my_plot/plot_over_multiple_x/: plot_over_multiple_x.py
KernelBench/my_process_agents/: README.md  error_response.txt  error_response_1766211187.250093.txt  error_response_1766211312.0343812.txt  error_response_1766337130.394024.txt  evaluate_with_modal.py  evaluate_with_modal_new.py  kernel_PS.py  kernel_PS_modal.py  kernel_dspy.py  kernel_gepa.py  kernel_gepa_per_iter.py  kernel_openevolve.py  run.sh  test_guide.py  test_liteLLM.py
KernelBench/results/kernel_dspy/: dspy_task_0_result.json  dspy_task_10_result.json  dspy_task_11_result.json  dspy_task_12_result.json  dspy_task_13_result.json  dspy_task_14_result.json  dspy_task_15_result.json  dspy_task_1_result.json  dspy_task_2_result.json  dspy_task_3_result.json  dspy_task_4_result.json  dspy_task_5_result.json  dspy_task_6_result.json  dspy_task_7_result.json  dspy_task_8_result.json  dspy_task_9_result.json  process_results.py  summary.csv
KernelBench/results/kernel_dspy_1/: dspy_task_0_result.json  dspy_task_10_result.json  dspy_task_11_result.json  dspy_task_12_result.json  dspy_task_13_result.json  dspy_task_14_result.json  dspy_task_15_result.json  dspy_task_1_result.json  dspy_task_2_result.json  dspy_task_3_result.json  dspy_task_4_result.json  dspy_task_5_result.json  dspy_task_6_result.json  dspy_task_7_result.json  dspy_task_8_result.json  dspy_task_9_result.json
KernelBench/results/kernel_gepa/: gepa_task_0_result.json  gepa_task_0_summary.json  gepa_task_10_result.json  gepa_task_10_summary.json  gepa_task_11_result.json  gepa_task_11_summary.json  gepa_task_12_result.json  gepa_task_12_summary.json  gepa_task_13_result.json  (+24 more)
Veribench/: .gitignore  CLAUDE.md  CSV_GENERATION_COMPLETE_SUMMARY.md  GEPA_CSV_GENERATION_README.md  HOW_TO_USE_LLM_JUDGE.md  README.md  TEST_SCORE_ADDITION_README.md  VERIFIER_README.md  add_test_scores_to_gepa.py  add_test_scores_to_openevolve.py  agent.py  agent_responses.json  agent_with_verification.py  connect_litellm.sh  disconnect_litellm.sh  evaluation_results.json  first_10_tasks_results.json  first_task_presentation.md  generate_dspy_csvs.py  generate_gepa_csvs.py  generate_openevolve_csvs.py  install.sh  lean_code.json  optimization_analysis_report.md  output.txt  output1.txt  output2.txt  output_2.5flash.txt  process_openevolve.py  pyproject.toml  regenerate_num_samples_csvs.py  results_task_0.json  solution_task_0.md  start_tunnel.sh  task_demo.py  test_verifier.py  uninstall.sh  veribench_test_scores_PS_Summarizer.csv  veribench_test_scores_PS_Summarizer.npy  veribench_test_scores_vanilla_PS.csv  (+2 more)
Veribench/guide/: __init__.py  guide.py  test_guide.py
Veribench/my_plots/: plot_veribench.py
Veribench/my_processing_agents/: README_KERNELBENCH.md  README_solution_dspy.md  README_solution_openevolve.md  SOLUTION_PS_USAGE.md  __init__.py  kernelbench_simple_test.py  lean4_utils.py  lean_eval.py  lean_interpretor.py  optimize_veribench_agent.py  optimize_veribench_agent_async_debug.py  run_gepa_direct_tasks_10_50.sh  run_gepa_direct_test.sh  scripts.sh  scripts_with_LLM_judge.sh  solution_GEPA.py  solution_GEPA_direct.py  solution_GEPA_direct_with_LLMjudge.py  solution_GEPA_with_LLMjudge.py  solution_PS.py  solution_PS_withLLMjudge.py  solution_PS_withLLMjudge_new.py  solution_dspy.py  solution_dspy_with_LLMjudge.py  solution_openevolve.py  solution_openevolve_with_LLMjudge.py  solution_opt.py  system_prompts.py  test_async_eval.py  test_guide_crash.py  test_kernelbench_setup.py  test_litellm.py  timouterror_output.txt
Veribench/veribench_dataset_utils/: README.md  all_unit_tests.json  create_datasets.py  eval_utils.py  llm_judge_utils.py  test_get_unit_tests.py  unit_tests.py
Veribench/webserver/: README.md  __init__.py  client.py  lean_feedback_server.py  test_server.py
(+805 files in other folders)
