[build-system]
# Tells pip how to build this package (using setuptools)
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Kernelbench"
version = "0.0.1"
description = "Local wrapper to manage KernelBench deps via uv"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {text = "MIT"}
authors = [
  {name = "KernelBench Maintainers"}
]
urls = {Homepage = "https://github.com/ScalingIntelligence/KernelBench"}

# Keep base deps minimal; upstream repo has its own requirements.txt.
# We still include common libs for scripts usage.
dependencies = [
  "numpy>=1.21.0",
  "fire",
  "tqdm",
  "modal",
  "uvicorn",
  "fastapi",
  "pydantic",
  "asyncio",
  "datasets>=4.4.1",
  "huggingface-hub>=0.34.0,<1.0",
  "transformers",
  "openai",
  "litellm",
  "trace-opt",
  "dspy-ai",
  "gepa",
  "openevolve",
  "torch>=2.0.0",
  "einops",
  "wandb>=0.23.1",
]

[project.optional-dependencies]
build = [
  "psutil>=5",
]

[tool.setuptools]
py-modules = []

[tool.uv]
# No special sources by default for KernelBench.

[tool.uv.sources]
# Optionally install KernelBench in editable mode from the cloned external repo
# Path will be set/used by install.sh after cloning to ../external/KernelBench
kernelbench = { path = "../external/KernelBench" }
trace-opt = { path = "../Trace", editable = true }
dspy-ai = { path = "../external/dspy-repo", editable = true }
gepa = { path = "../external/gepa-repo", editable = true }
openevolve = { path = "../external/openevolve", editable = true }

